# icrc_plus_ledger

./: Cargo.toml  README.adoc  README.md  build.rs  build.sh
src/: lib.rs  main.rs
src/declarations/icrc1_ledger/: icrc1_ledger.did.d.ts
src/declarations/ledger/: ledger.did.d.ts
